...
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/anatomia_interactiva_description" />

            <!-- Zona 5001: Sacra -->
            <TextView
                android:id="@+id/hotspotZona5001"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Sacra"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintVertical_bias="0.08" />

            <!-- Zona 5002: Glútea -->
            <TextView
                android:id="@+id/hotspotZona5002"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Glútea"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintVertical_bias="0.62" />

            <!-- Zona 5005: Coccígea -->
            <TextView
                android:id="@+id/hotspotZona5005"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Coccígea"
...
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubInstructions"
        app:layout_constraintBottom_toTopOf="@+id/btnQuizRegion" />

    <!-- Botón de Quiz modernizado -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnQuizRegion"
        style="@style/Widget.EquusApp.Button.Primary"
        android:layout_width="0dp"
...
