...
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/anatomia_interactiva_description" />

            <!-- Zona 4001: Escapular -->
            <TextView
                android:id="@+id/hotspotZona4001"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Escapular"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintVertical_bias="0.15" />

            <!-- Zona 4002: Dorsal Escapular -->
            <TextView
                android:id="@+id/hotspotZona4002"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Dorsal Escapular"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintVertical_bias="0.35" />

            <!-- Zona 4004: Olecraneana -->
            <TextView
                android:id="@+id/hotspotZona4004"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#00000000"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="Zona Olecraneana"
...
